# jhDynArrayTools

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  index.html  params.json
scripts/: dynArrayTools.mel
src/: da_IndexByRadius.cpp  da_IndexByRadius.h  da_ProjectToSurface.cpp  da_ProjectToSurface.h  da_Randomizer.cpp  da_Randomizer.h  da_gridgenerator.cpp  da_gridgenerator.h  dynArrayUtils.cpp  dynArrayUtils.h  pluginMain.cpp
